Fix z-index of .dropdown-toggle
A recent fix seemed to improve this but by going a bit further it seems to resolve the problem where the dropdown-toggle buttons would appear over alert messages.

--- a/style/themes/lcars.css
+++ b/style/themes/lcars.css
@@ -514,7 +514,7 @@ p.login-box-msg,
 }
 
 .dropdown-toggle {
-  z-index: 1050;
+  z-index: 1000;
 }
 
 .main-header li.user-header {
